objects/ChargentOrders__Chargent_Automated_Collections_Stage__c.object
<CustomObject>
    <fields>
        <fullName>ChargentOrders__AC_Stage_Number__c</fullName>
        <description>This field indicates which stage of the Automated Collections process this record represents. (e.g., Stage 3)</description>
        <inlineHelpText>This field indicates which stage of the Automated Collections process this record represents. (e.g., Stage 3)</inlineHelpText>
        <label>AC Stage Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__AC_Stage__c</fullName>
        <description>This field indicates which stage of the Automated Collections process this record represents. (e.g., Stage 3/5)</description>
        <inlineHelpText>This field indicates which stage of the Automated Collections process this record represents. (e.g., Stage 3/5)</inlineHelpText>
        <label>AC Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__CC_Email_Address__c</fullName>
        <description>The email sent during this stage will also be sent to this address.</description>
        <inlineHelpText>The email sent during this stage will also be sent to this address.</inlineHelpText>
        <label>CC Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Chargent_Automated_Collections__c</fullName>
        <label>Automated Collections Record</label>
        <referenceTo>ChargentOrders__Chargent_Automated_Collections__c</referenceTo>
        <relationshipLabel>Chargent Automated Collections Stages</relationshipLabel>
        <relationshipName>Chargent_Automated_Collections_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Email_Sent__c</fullName>
        <description>This field indicates whether an email has been sent during this stage.</description>
        <inlineHelpText>This field indicates whether an email has been sent during this stage.</inlineHelpText>
        <label>Email Sent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No email scheduled for this stage</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentOrders__Email_Template__c</fullName>
        <description>This field displays the name of the email template used if an email was sent during this stage.</description>
        <inlineHelpText>This field displays the name of the email template used if an email was sent during this stage.</inlineHelpText>
        <label>Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Execute_Date__c</fullName>
        <description>This field indicates the date on which this stage is scheduled to execute.</description>
        <inlineHelpText>This field indicates the date on which this stage is scheduled to execute.</inlineHelpText>
        <label>Execute Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Next_Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the next field scheduled to execute.</description>
        <inlineHelpText>This is the next field scheduled to execute.</inlineHelpText>
        <label>Next Stage</label>
        <referenceTo>ChargentOrders__Chargent_Automated_Collections_Stage__c</referenceTo>
        <relationshipLabel>Chargent Automated Collections Items</relationshipLabel>
        <relationshipName>Chargent_Automated_Collections_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Payment_Retry__c</fullName>
        <description>This field indicates the automatic retry status of this stage. This will display whether the charge is scheduled or not, and whether that retry resulted in a successful payment collection.</description>
        <inlineHelpText>This field indicates the automatic retry status of this stage. This will display whether the charge is scheduled or not, and whether that retry resulted in a successful payment collection.</inlineHelpText>
        <label>Payment Retry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Yes - Payment Collected</fullName>
                </value>
                <value>
                    <fullName>Yes - Payment Failed</fullName>
                </value>
                <value>
                    <fullName>No retry scheduled for this stage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentOrders__Sender_Email_Address__c</fullName>
        <description>Organization wide email address Id for sending AC emails.</description>
        <inlineHelpText>Organization wide email address Id for sending AC emails.</inlineHelpText>
        <label>Sender Email Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field displays a link to the Transaction record generated if this stage executed a payment retry.</description>
        <inlineHelpText>This field displays a link to the Transaction record generated if this stage executed a payment retry.</inlineHelpText>
        <label>Transaction</label>
        <referenceTo>ChargentOrders__Transaction__c</referenceTo>
        <relationshipLabel>Chargent Automated Collections Stages</relationshipLabel>
        <relationshipName>Chargent_Automated_Collections_Stages</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Chargent Automated Collections Stage</label>
    <nameField>
        <displayFormat>ACS-{0000000000}</displayFormat>
        <label>Automated Collections Stage ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chargent Automated Collections Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>